--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,10 @@
  */
 
 plugins {
-    // Apply the java plugin to add support for Java
-    id 'java'
-
+    id 'war'
     // Apply the application plugin to add support for building an application
-    id 'application'
+    id "org.akhikhl.gretty" version "2.0.0"
+    id "org.springframework.boot" version "2.1.4.RELEASE"
 }
 
 repositories {
@@ -27,6 +26,5 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
+apply plugin: 'org.springframework.boot'
 
-// Define the main class for the application
-mainClassName = 'hello.App'
